# aoc2022

./: Cargo.toml
src/01/: main.rs
src/02/: main.rs
src/03/: main.rs
src/04/: main.rs
src/05/: main.rs
src/06/: main.rs
src/07/: main.rs
src/08/: main.rs
src/09/: main.rs
src/10/: main.rs
src/11/: main.rs
src/12/: main.rs
src/13/: main.rs
src/14/: main.rs
src/15/: main.rs
src/16/: main.rs
src/17/: main.rs
src/18/: main.rs
src/19/: main.rs
src/20/: main.rs
src/21/: main.rs
src/22/: main.rs
src/23/: main.rs
src/24/: main.rs
src/25/: main.rs
src/day_01/: main.rs
src/day_02/: main.rs
