[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01"
path = "src/01/main.rs"

[[bin]]
name = "02"
path = "src/02/main.rs"

[[bin]]
name = "03"
path = "src/03/main.rs"

[[bin]]
name = "04"
path = "src/04/main.rs"

[[bin]]
name = "05"
path = "src/05/main.rs"

[[bin]]
name = "06"
path = "src/06/main.rs"

[[bin]]
name = "07"
path = "src/07/main.rs"

[[bin]]
name = "08"
path = "src/08/main.rs"

[dependencies]
itertools = "0.10.5"
petgraph = "0.6.2"
